[package]
name = "thumbnailer_cli"
version = "0.1.0"
authors = ["The Thumbnailer Developers <thumbnailer@dieterle.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
image = "0.23.3"
thumbnailer = { git = "https://github.com/Thumbnailer/thumbnailer.git", branch="samuel"}